AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4
CFLAGS = --pedantic -Wall -O2
lib_LTLIBRARIES = libcapsicum.la
libcapsicum_la_SOURCES = libcapsicum.c libcapsicum_dns.c libcapsicum_dns.h libcapsicum_grp.c libcapsicum_grp.h libcapsicum_impl.h libcapsicum_pwd.c libcapsicum_pwd.h libcapsicum_random.c libcapsicum_random.h libcapsicum_service.c libcapsicum_service.h libcapsicum_sysctl.c libcapsicum_sysctl.h
libcapsicum_la_HEADERS = libcapsicum.h
libcapsicum_ladir = ${includedir}
dist_man_MANS = libcapsicum.3
